erDiagram
    SCRAPER ||--o{ RUN : "executes"
    SCRAPER ||--o{ INCIDENT : "suffers"
    SCRAPER ||--|| BASELINE : "has rolling"
    RUN ||--o{ PRICE_RECORD : "produces"
    INCIDENT ||--o{ HEAL_ATTEMPT : "triggers"
    PRICE_RECORD }o--|| PRODUCT : "prices"
    PRODUCT }o--o{ BASKET : "belongs to"
    INCIDENT ||--o{ ALERT : "emits"
    PRICE_RECORD ||--o{ ALERT : "price-drop emits"

    SCRAPER {
        text id PK "collector_id from Studio"
        text name
        text target_site
        text output_schema "JSON Schema"
        text status "healthy|suspect|broken|healing|verifying|manual"
        int heal_budget_daily
    }
    RUN {
        uuid id PK
        text scraper_id FK
        text trigger "cron|manual|canary"
        text status "ok|anomalous|error"
        jsonb raw_output
        timestamptz finished_at
    }
    BASELINE {
        text scraper_id FK
        jsonb field_null_rates
        int expected_row_count
        jsonb value_ranges "per-field p5/p95"
        timestamptz updated_at
    }
    INCIDENT {
        uuid id PK
        text scraper_id FK
        text kind "schema|nulls|rowcount|drift|freshness|error"
        jsonb evidence
        text state "open|healing|resolved|manual"
        timestamptz opened_at
        timestamptz resolved_at
    }
    HEAL_ATTEMPT {
        uuid id PK
        uuid incident_id FK
        text claude_diagnosis
        text heal_prompt
        text studio_diff
        text verdict "approved|rejected|failed"
        int credits_spent
        timestamptz created_at
    }
    PRODUCT {
        uuid id PK
        text name "e.g. eggs 12ct"
        text category
    }
    PRICE_RECORD {
        uuid id PK
        uuid run_id FK
        uuid product_id FK
        text store
        numeric price
        text currency
        timestamptz observed_at
    }
    ALERT {
        uuid id PK
        text kind "price_drop|breakage|healed|escalation"
        text channel "email|telegram|discord"
        jsonb payload
        timestamptz sent_at
    }
